tests/good/syntax/027-option-no-type.clap
val x : { None + Some int } = Some [42]

