tests/bad/syntax/025-option.clap
val x : { None + Some int } = Some { None + Some int } [42]

